--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="exercicios/texto2.html">02 - Texto 2</a> |
         <a href="exercicios/listaAninhada.html">03 - Lista Aninhada</a> |
         <a href="exercicios/link.html">04 - Link</a> |
-
+        <a href="exercicios/tabela.html">05 - Tabelas</a> |
 
     </nav>
     <section id="conteudo"></section>
