--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="exercicios/listaAninhada.html">03 - Lista Aninhada</a> |
         <a href="exercicios/link.html">04 - Link</a> |
         <a href="exercicios/tabela.html">05 - Tabelas</a> |
+        <a href="exercicios/form/form.html">06 - Forms</a> |
 
     </nav>
     <section id="conteudo"></section>
