--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <a href="exercicios/link.html">04 - Link</a> |
         <a href="exercicios/tabela.html">05 - Tabelas</a> |
         <a href="exercicios/form/form.html">06 - Forms</a> |
+        <a href="exercicios/imgs.html">07 - Imagens</a> |
+
 
     </nav>
     <section id="conteudo"></section>
