Curso completo HTML

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <a href="exercicios/tabela.html">05 - Tabelas</a> |
         <a href="exercicios/form/form.html">06 - Forms</a> |
         <a href="exercicios/imgs.html">07 - Imagens</a> |
+        <a href="exercicios/video.html">08 - Vídeos</a> |
+        <a href="exercicios/tagsNaoVisuais.html">09 - Tags Não Visuais</a> |
+
 
 
     </nav>
